Add PORT environment variable to Dockerfile

--- a/Classification/Loan_Default_Prediction/BR-Macro-Enhanced_Credit_Default/Dockerfile
+++ b/Classification/Loan_Default_Prediction/BR-Macro-Enhanced_Credit_Default/Dockerfile
@@ -5,6 +5,7 @@ FROM python:3.11-slim
 # -------------------------------------------------
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
+ENV PORT=8000
 
 # -------------------------------------------------
 # Working directory
@@ -42,4 +43,4 @@ EXPOSE 8000
 # -------------------------------------------------
 # Run FastAPI
 # -------------------------------------------------
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn src.main:app --host 0.0.0.0 --port ${PORT}"]
